--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    background: url(https://www.camposanto.com/external/wallpapers/Launch_Green/FWG_3440x1440.jpg) no-repeat center center fixed; 
+    /* background: url(https://www.camposanto.com/external/wallpapers/Launch_Green/FWG_3440x1440.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: cover; */
 
     background-color: beige;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -12,6 +12,7 @@ body {
     text-align: center;
     justify-content: center;
     flex-direction: column;
+    background-image: url("favicon.png");
 }
 
 .id {
@@ -24,7 +25,7 @@ body {
     text-align: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 45px;
+    margin-top: 30px;
     margin-bottom: 0px;
 }
 
@@ -44,10 +45,12 @@ h2 {
     text-align: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 10px;
+    margin-top: 20px;
+    font-size: 15px;
+    font-weight: bold;
 }
 
-button {
+.blue {
     width: 250px;
     height: 70px;
     text-align: center;
@@ -57,12 +60,52 @@ button {
     border-radius: 8px;
     border-style: groove;
     border-color: navy;
-    margin-top: 40px;
+    margin-top: 20px;
     margin-right: 10px;
 }
 
-button:hover {
+.gold {
+    width: 250px;
+    height: 70px;
+    text-align: center;
+    background-color: beige;
+    color: navy;
+    font-size: 18px;
+    border-radius: 8px;
+    border-style: groove;
+    border-color: navy;
+    margin-top: 20px;
+    margin-right: 10px;
+}
+
+.banana {
+    width: 250px;
+    height: 70px;
+    text-align: center;
+    background-color: beige;
+    color: navy;
+    font-size: 18px;
+    border-radius: 8px;
+    border-style: groove;
+    border-color: navy;
+    margin-top: 20px;
+    margin-right: 10px;
+}
+
+.blue:hover {
     transition: 0.4s;
     background-color: navy; /* Navy*/
     color: beige;
-  }
+}
+
+.gold:hover {
+    transition: 0.4s;
+    background-color: gold; /* Navy*/
+    color: blue;
+}
+
+.banana:hover {
+    transition: 0.4s;
+    background-color: yellow;
+    color: black;
+}
