--- a/style.css
+++ b/style.css
@@ -45,7 +45,17 @@ h2 {
     text-align: center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 30px;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.par2 {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 0;
     font-size: 15px;
     font-weight: bold;
 }
