--- a/style.css
+++ b/style.css
@@ -29,6 +29,15 @@ body {
     margin-bottom: 0px;
 }
 
+.footer {
+    display: flex;
+    background-color: beige;
+    border-radius: 10px;
+    font-size: 20px;
+    width: 75%;
+    text-align: center;
+    justify-content: center;
+}
 
 h2 {
     display: flex;
@@ -38,6 +47,12 @@ h2 {
     margin-top: 0px;
     margin-bottom: 0px;
     font-size: 15px;
+}
+
+h3 {
+    font-size: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .par {
